# myNotes

./: CMakeLists.txt  build.sh  imgui.ini
src/: CMakeLists.txt  main.cpp
src/core/: CanvasElement.hpp  CanvasState.hpp  History.cpp  History.hpp  Tool.hpp
src/input/: CanvasController.cpp  CanvasController.hpp
src/platform/: Window.cpp  Window.hpp
src/render/: CanvasRenderer.cpp  CanvasRenderer.hpp
src/ui/: ImGuiLayer.cpp  ImGuiLayer.hpp  ToolPanel.cpp  ToolPanel.hpp
src/util/: ImVecUtil.hpp
